[tool.poetry]
name = "python-eth-amm"
version = "0.0.1"
description = "Python package for interacting with AMMs and simulating their behavior"
authors = ["Eli Barbieri <eli@nethermind.io>"]
readme = "README.md"
packages = [
    {include = "python_eth_amm"},
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
pandas = "^1.5.3"
web3 = ">=4.0.0"
sqlalchemy = {extras = ["postgres"], version = "^2.0.9"}
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
pylint = "^2.15.10"
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.10.0"
pytest = "^6.2.5"
pytest-timeout = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.evm.dependencies]
maturin = "^0.13.5"


[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.1"
autodoc-pydantic = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.coverage
  | \.env
  | \.git
  | \.github
  | \.pytest_cache
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | cache
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
use_parentheses = true
src_paths = ["python_eth_amm", "tests"]
filter_files = true
known_first_party = "python_eth_amm"
py_version='310'

[tool.pylint.main]
max-line-length = 120
jobs = 0

[tool.pylint.MASTER]
ignore-paths = [ "^tests\\.*$", "^docs\\.*$" ]
extension-pkg-whitelist=["pydantic"]
py-version = "3.10"
suggestion-mode = true
disable=["C0114", "W1514", "R0903", "R1719", "W1203"]


[tool.pylint.design]
max-args = 9  # Maximum number of arguments for function / method.
max-attributes = 15  # Maximum number of attributes for a class (see R0902).
max-bool-expr = 5  # Maximum number of boolean expressions in an if statement (see R0916).
max-branches = 12  # Maximum number of branch for function / method body.
max-locals = 15  # Maximum number of locals for function / method body.
max-parents = 7  # Maximum number of parents for a class (see R0901).
max-public-methods = 20  # Maximum number of public methods for a class (see R0904).
max-returns = 6  # Maximum number of return / yield for function / method body.
max-statements = 50  # Maximum number of statements in function / method body.
min-public-methods = 2  # Minimum number of public methods for a class (see R0903).

[tool.pylint.imports]
known-third-party = ["sqlalchemy", "py-evm"]

[tool.mypy]
exclude = [
    "^docs\\.py$",
    "^tests\\.py$",
]