[tool.poetry]
name = "entro"
version = "0.0.1"
description = "Python package for interacting with AMMs and simulating their behavior"
authors = ["Eli Barbieri <eli@nethermind.io>"]
readme = "README.md"
packages = [
    {include = "nethermind"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
web3 = ">=4.0.0"
sqlalchemy = {extras = ["asyncio", "postgres"], version = "^2.0.24"}
psycopg2-binary = "^2.9.1"
aiohttp = "^3.8.6"
rich = "^13.7.0"
idealis = {git = "https://github.com/NethermindEth/idealis"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
pylint = ">=3.0.0"
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.10.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-timeout = "^2.1.0"
python-dotenv = "^1.0.0"
docker = "^7.1.0"
pandas-stubs = "^2.1.1.230928"

[tool.poetry.group.evm]
optional = true

[tool.poetry.group.evm.dependencies]
pyrevm = {git = "https://github.com/paradigmxyz/pyrevm"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.1"
autodoc-pydantic = "^1.8.0"

[tool.poetry.scripts]
entro = "nethermind.entro.cli:entro_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.coverage
  | \.env
  | \.git
  | \.github
  | \.pytest_cache
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | cache
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
use_parentheses = true
src_paths = ["nethermind", "tests", "integration_tests"]
filter_files = true
known_first_party = "nethermind"
py_version='310'

[tool.pylint.main]
max-line-length = 120
jobs = 12
ignore-paths = [ "^tests\\.*$", "^docs\\.*$", "^integration_tests\\.*$" ]
extension-pkg-whitelist=["pydantic"]
py-version = "3.10"
suggestion-mode = true
disable=["C0114", "W1514", "R0903", "R1719", "W1203", "R0801"]


[tool.pylint.design]
max-args = 9  # Maximum number of arguments for function / method.
max-attributes = 15  # Maximum number of attributes for a class (see R0902).
max-bool-expr = 5  # Maximum number of boolean expressions in an if statement (see R0916).
max-branches = 12  # Maximum number of branch for function / method body.
max-locals = 15  # Maximum number of locals for function / method body.
max-parents = 7  # Maximum number of parents for a class (see R0901).
max-public-methods = 20  # Maximum number of public methods for a class (see R0904).
max-returns = 6  # Maximum number of return / yield for function / method body.
max-statements = 50  # Maximum number of statements in function / method body.
min-public-methods = 2  # Minimum number of public methods for a class (see R0903).

[tool.pylint.imports]
known-third-party = ["sqlalchemy", "py-evm", "nethermind"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
exclude = [
    "^docs\\.py$",
    "^tests\\.py$",
    "^integration_tests\\.py$",
]